--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -21,7 +21,6 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "moment-timezone": "^0.5.34",
-    "node-sass": "^7.0.1",
     "prism-react-renderer": "^1.3.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
@@ -44,6 +43,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.64.2",
     "simplebar-react": "^2.3.6",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
